--- a/spriteMaker/spriteMaker/AnimatedPreviewPopupViewController.storyboard
+++ b/spriteMaker/spriteMaker/AnimatedPreviewPopupViewController.storyboard
@@ -105,7 +105,7 @@
                                                             </connections>
                                                         </button>
                                                     </subviews>
-                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstItem="3XJ-Hu-e0J" firstAttribute="centerY" secondItem="Gve-Ok-Jzy" secondAttribute="centerY" id="ACp-mu-Zf8"/>
                                                         <constraint firstItem="3XJ-Hu-e0J" firstAttribute="width" secondItem="Gve-Ok-Jzy" secondAttribute="width" multiplier="0.8" id="bhe-2q-Sn8"/>
