--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                                                         </collectionView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nyT-Ha-NV6">
                                                             <rect key="frame" x="0.0" y="-25" width="99" height="99"/>
-                                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="nyT-Ha-NV6" secondAttribute="height" multiplier="1:1" id="ECb-mV-Ish"/>
                                                             </constraints>
@@ -257,7 +257,6 @@
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <size key="customSize" width="351" height="109"/>
                                         <connections>
-                                            <outlet property="animatedButton" destination="OeQ-R7-Lac" id="tpp-HV-yNo"/>
                                             <outlet property="animatedPreview" destination="nyT-Ha-NV6" id="neE-ia-aus"/>
                                             <outlet property="previewImageCollection" destination="ERw-1S-ImA" id="jv3-sD-BF7"/>
                                         </connections>
