--- a/spriteMaker/spriteMaker/ColorPaletteListPopup.storyboard
+++ b/spriteMaker/spriteMaker/ColorPaletteListPopup.storyboard
@@ -58,31 +58,50 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Palette name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhc-6D-HNn">
-                                                            <rect key="frame" x="5" y="5" width="100" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <rect key="frame" x="5" y="5" width="107" height="21"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UQf-id-5aj">
                                                             <rect key="frame" x="5" y="30" width="305" height="68"/>
-                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ADR-Pc-Ga4">
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="5" minimumInteritemSpacing="5" id="ADR-Pc-Ga4">
                                                                 <size key="itemSize" width="62" height="56"/>
                                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                             </collectionViewFlowLayout>
                                                             <cells>
-                                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="A7k-Pp-4h6">
+                                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorFrameCell" id="A7k-Pp-4h6" customClass="ColorFrameCell" customModule="spriteMaker" customModuleProvider="target">
                                                                     <rect key="frame" x="0.0" y="6" width="62" height="56"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9tx-ZT-tWX">
                                                                         <rect key="frame" x="0.0" y="0.0" width="62" height="56"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
+                                                                        <subviews>
+                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="14M-C3-A8U">
+                                                                                <rect key="frame" x="0.0" y="0.0" width="62" height="56"/>
+                                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                            </view>
+                                                                        </subviews>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="trailing" secondItem="14M-C3-A8U" secondAttribute="trailing" id="adb-J4-fvd"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="14M-C3-A8U" secondAttribute="bottom" id="oIE-Xx-4h9"/>
+                                                                            <constraint firstItem="14M-C3-A8U" firstAttribute="top" secondItem="9tx-ZT-tWX" secondAttribute="top" id="stz-pe-LtI"/>
+                                                                            <constraint firstItem="14M-C3-A8U" firstAttribute="leading" secondItem="9tx-ZT-tWX" secondAttribute="leading" id="sxX-wK-Tc2"/>
+                                                                        </constraints>
                                                                     </collectionViewCellContentView>
                                                                     <size key="customSize" width="62" height="56"/>
+                                                                    <connections>
+                                                                        <outlet property="colorFrame" destination="14M-C3-A8U" id="uac-ev-jzn"/>
+                                                                    </connections>
                                                                 </collectionViewCell>
                                                             </cells>
+                                                            <connections>
+                                                                <outlet property="dataSource" destination="EwK-FN-g91" id="ryh-9C-nvU"/>
+                                                                <outlet property="delegate" destination="EwK-FN-g91" id="HS3-Lc-UNj"/>
+                                                            </connections>
                                                         </collectionView>
                                                     </subviews>
                                                     <constraints>
@@ -94,8 +113,12 @@
                                                         <constraint firstItem="UQf-id-5aj" firstAttribute="top" secondItem="HLf-9h-5Lz" secondAttribute="top" constant="30" id="smD-RM-y2n"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
-                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <size key="customSize" width="315" height="103"/>
+                                                <connections>
+                                                    <outlet property="collectionView" destination="UQf-id-5aj" id="yF5-BY-TMQ"/>
+                                                    <outlet property="paletteLabel" destination="dhc-6D-HNn" id="WV7-LK-LXz"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                         <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="AddColorPaletteFooterCell" id="5Om-VF-Ltl" customClass="AddColorPaletteFooterCell" customModule="spriteMaker" customModuleProvider="target">
@@ -103,9 +126,9 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="i9N-wT-NB0">
-                                                    <rect key="frame" x="149.5" y="13.5" width="18" height="16.5"/>
+                                                    <rect key="frame" x="147.5" y="11.5" width="22" height="20.5"/>
                                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="bold"/>
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="20" weight="heavy"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -133,7 +156,7 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YON-ai-GdO">
-                                        <rect key="frame" x="15" y="291.5" width="30" height="30"/>
+                                        <rect key="frame" x="10" y="291.5" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="YON-ai-GdO" secondAttribute="height" multiplier="1:1" id="HWW-Oz-szY"/>
                                         </constraints>
@@ -156,7 +179,7 @@
                                     <constraint firstItem="YON-ai-GdO" firstAttribute="top" secondItem="Bhh-kc-mkV" secondAttribute="bottom" constant="5" id="PwX-N9-5zm"/>
                                     <constraint firstAttribute="trailing" secondItem="Bhh-kc-mkV" secondAttribute="trailing" constant="5" id="R07-4u-dNP"/>
                                     <constraint firstAttribute="bottom" secondItem="Bhh-kc-mkV" secondAttribute="bottom" constant="40" id="Y6r-9S-iZg"/>
-                                    <constraint firstItem="YON-ai-GdO" firstAttribute="leading" secondItem="NXP-bx-ukM" secondAttribute="leading" constant="15" id="aNB-dw-1K2"/>
+                                    <constraint firstItem="YON-ai-GdO" firstAttribute="leading" secondItem="NXP-bx-ukM" secondAttribute="leading" constant="10" id="aNB-dw-1K2"/>
                                     <constraint firstAttribute="bottom" secondItem="YON-ai-GdO" secondAttribute="bottom" constant="5" id="pfb-gV-WWX"/>
                                     <constraint firstItem="Bhh-kc-mkV" firstAttribute="leading" secondItem="NXP-bx-ukM" secondAttribute="leading" constant="5" id="tOa-ld-53F"/>
                                 </constraints>
