--- a/spriteMaker/spriteMaker/PopupStoryboards/DrawingToolPopup.storyboard
+++ b/spriteMaker/spriteMaker/PopupStoryboards/DrawingToolPopup.storyboard
@@ -16,30 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="alR-S1-Ag1">
-                                <rect key="frame" x="30.5" y="255.5" width="41.5" height="128"/>
-                                <color key="backgroundColor" red="0.18086728182705969" green="0.18086728182705969" blue="0.18086728182705969" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="yIk-dU-gtC"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7eB-5b-Mnk">
-                                    <size key="itemSize" width="30" height="31"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="MEs-b2-ehP">
-                                        <rect key="frame" x="6" y="0.0" width="30" height="31"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="5qQ-kX-Js0">
-                                            <rect key="frame" x="0.0" y="0.0" width="30" height="31"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                        <size key="customSize" width="30" height="31"/>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MkS-dL-Eof">
                                 <rect key="frame" x="0.0" y="54" width="414" height="808"/>
                                 <subviews>
@@ -86,6 +62,49 @@
                                     <outletCollection property="gestureRecognizers" destination="aoP-Xp-JtD" appends="YES" id="gyl-xz-F5a"/>
                                 </connections>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="alR-S1-Ag1">
+                                <rect key="frame" x="30.5" y="255.5" width="41.5" height="128"/>
+                                <color key="backgroundColor" red="0.18086728182705969" green="0.18086728182705969" blue="0.18086728182705969" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="250" constant="128" id="yIk-dU-gtC"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="7eB-5b-Mnk">
+                                    <size key="itemSize" width="30" height="31"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ExtToolCell" id="MEs-b2-ehP" customClass="ExtToolCell" customModule="spriteMaker" customModuleProvider="target">
+                                        <rect key="frame" x="6" y="10" width="30" height="31"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="5qQ-kX-Js0">
+                                            <rect key="frame" x="0.0" y="0.0" width="30" height="31"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1nX-nn-MNn">
+                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="31"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="1nX-nn-MNn" secondAttribute="bottom" id="8yA-Kf-jxF"/>
+                                                <constraint firstAttribute="trailing" secondItem="1nX-nn-MNn" secondAttribute="trailing" id="8zB-gA-1yK"/>
+                                                <constraint firstItem="1nX-nn-MNn" firstAttribute="top" secondItem="5qQ-kX-Js0" secondAttribute="top" id="nIc-1R-Ipx"/>
+                                                <constraint firstItem="1nX-nn-MNn" firstAttribute="leading" secondItem="5qQ-kX-Js0" secondAttribute="leading" id="t7m-dw-ZjR"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="30" height="31"/>
+                                        <connections>
+                                            <outlet property="toolImage" destination="1nX-nn-MNn" id="qq1-4w-ihB"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="KDC-mZ-Pzw" id="N3B-pa-jXV"/>
+                                    <outlet property="delegate" destination="KDC-mZ-Pzw" id="RyB-0r-jUu"/>
+                                </connections>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="y6w-hy-Qh8"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -102,9 +121,9 @@
                     </view>
                     <connections>
                         <outlet property="drawingToolList" destination="kH7-ar-BmL" id="1ST-lp-lTJ"/>
+                        <outlet property="extToolList" destination="alR-S1-Ag1" id="eQJ-0f-Cl4"/>
                         <outlet property="popupSuperView" destination="MkS-dL-Eof" id="Yt1-pG-0ma"/>
                         <outlet property="toolIcon" destination="eXO-CT-gry" id="zdO-hL-vLy"/>
-                        <outlet property="toolIconList" destination="alR-S1-Ag1" id="dbw-Zh-Lmu"/>
                         <outlet property="toolListInnerView" destination="XA6-O4-Hl3" id="t7w-po-fbj"/>
                     </connections>
                 </viewController>
